# coordenacao-op

./: .gitignore  CHANGELOG.md  CHANGELOG_v0.8.txt  CHANGELOG_v0.9.txt  CHANGELOG_v1.0.txt  CHANGELOG_v1.1.txt  CHANGELOG_v1.2.txt  CHANGELOG_v1.3.txt  CHANGELOG_v1.4.txt  CHANGELOG_v1.6.txt  CHANGELOG_v2.0.txt  CHANGELOG_v2.1.1.txt  CHANGELOG_v2.1.2.txt  CHANGELOG_v2.1.3.txt  CHANGELOG_v2.1.4.txt  CHANGELOG_v2.1.5.txt  CHANGELOG_v2.1.6.txt  CHANGELOG_v2.1.7.txt  CHANGELOG_v2.1.txt  CHECKLIST_v0.9.0.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  ROADMAP_GERENCIADOR.md  SECURITY.md  main.py  main_gui.py  requirements.txt
.claude/: launch.json
.github/: pull_request_template.md
config/: configuracoes.json  criterios.json
docs/: AUTO_UPDATE_PLAN.md
domain/: aluno.py  avaliacao.py  turma.py
gui/: app.py  bootstrap.py  platform_ui.py  session.py
modern-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
modern-ui/src-tauri/: Cargo.toml  tauri.conf.json
modern-ui/src-tauri/capabilities/: default.json
modern-ui/src-tauri/scripts/: planejamento_anos_finais.gs  planejamento_fundamental.gs  planejamento_medio.gs
modern-ui/src-tauri/src/: backup.rs  config.rs  conselho_pendrive.rs  docx.rs  fotos.rs  ia.rs  importador_alunos.rs  importador_mapao.rs  infra.rs  main.rs  pei.rs  pendencias.rs  planejamento.rs  prova_paulista.rs  shell.rs  sync.rs  tipos.rs  turmas.rs
scripts/: build_linux_appimage.sh  build_windows.ps1  exemplo_plano_ensino.py  generate_tauri_latest_json.ps1
services/: acompanhamento_ajustes.py  acompanhamento_frequencia.py  atualizador_turma.py  (+18 more)
(+45 files in other folders)
