[package]
name = "coordenacaoop"
version = "2.1.4"
description = "Nova interface desktop do CoordenacaoOP"
authors = ["CoordenacaoOP Contributors"]
license = "GPL-3.0-or-later"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
zip = "2"
chrono = { version = "0.4", features = ["clock"] }
calamine = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
